# trpp_bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: heroku.yml
documentation/source/: conf.py  dependencies.rst  installation.rst
scripts/: entrypoint.sh
