[tool.poetry]
name = "trppbot"
version = "0.1.0"
description = "Bot for users of the VK network"
authors = ["Elizaveta and Maxim <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
vk-api = "^11.9.1"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]
Sphinx = "^3.5.3"
sphinx-rtd-theme = "^0.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
